# ConfigTracker

./: CMakeLists.txt  README.md
example/: main.cpp  test_base.cpp
include/configtracker/: config_tracker.h  file_watcher.h  git_repo_manager.h
src/: config_tracker.cpp  file_watcher.cpp  git_repo_manager.cpp
